tests/negative/test_attrs_non_type_then_type_attr.orb
fnc main () () {
    sym (x 0::foo:i32);
};